Added navigation bar, profile section and about section.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  padding: 15px 25%;
 }
-
+.App-header {
+  padding-bottom: 75px;
+}
+.App-header nav {
+  justify-content: start;
+  align-content: space-around;
+}
+.App-header nav ul {
+  list-style: none;
+  display: flex;
+}
+.App-header nav ul li {
+  margin-right: 1rem;
+}
 .App-link {
   color: #61dafb;
 }
+.App-main {
+  line-height: 1.6rem;
+}
+.App-main #profile {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
+.App-main #profile h1 {
+  font-size: 1.70rem;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.App-main h1, .App-main small {
+  display:contents;
+  flex: 1;
+}
+#about {
+
+  display: block;
+}
+
+#about .about-subtitle {
+  text-align: start;
+  display: inline;
+}
+#about p {
+  text-align: start;
+  display: block;
+
 }
